--- a/Tribute Page/styles.css
+++ b/Tribute Page/styles.css
@@ -17,7 +17,7 @@ body {
     background-color: rgb(255, 255, 255);
     margin: 20px;
     display: flex;
-    align-items: ce;
+    align-items: center;
     flex-direction: column;
 }
 
