--- a/Product landing Page/styles.css
+++ b/Product landing Page/styles.css
@@ -21,6 +21,8 @@ nav {
                 
 a {
     color: black;
+    text-decoration: none;
+    margin: 10px;
 }
 
 header {
@@ -42,12 +44,15 @@ header {
     text-transform: uppercase;
     background-color: rgb(255, 208, 0);
     cursor: pointer;
+    margin-top: 10px;
 }
 
 #div-form {
+    display: flex;
+    flex-direction: column;
     padding-top: 70px;
     /*border: solid blue 2px;*/
-    text-align: center;
+    align-items: center;
 }
 
 #header-img {
@@ -74,12 +79,59 @@ header {
 }
 
 form {
-    display: block;
+    display: flex;
+    flex-direction: column;
     margin-top: 0em;
+    padding: 10px;
 }
 
 #how-it-works {
     margin-top: 50px;
     display: flex;
     justify-content: center;
+}
+
+@media (max-width: 600px) {
+    .btn {
+      display: none;
+    }
+} 
+
+
+#pricing {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.cajas {
+    width: 250px;
+    border: solid rgb(0, 0, 0) 1px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 10px;
+    margin: 10px;
+}
+
+h3{
+    background-color: rgb(207, 207, 207);
+    color: black;
+    width: 100%;
+    height: 50px;
+    text-transform: uppercase;
+    font-weight: 700;
+    text-align: center;
+}
+
+ol{
+    text-align: center;
+    list-style: none;
+}
+
+button{
+    width: 100px;
+    margin: auto;
+    background-color: rgb(255, 208, 0);
 }
