--- a/Product landing Page/styles.css
+++ b/Product landing Page/styles.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Lato', sans-serif;
+}
+
 nav {
 	float: right;
 }
@@ -135,3 +139,27 @@ button{
     margin: auto;
     background-color: rgb(255, 208, 0);
 }
+
+footer{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 30px;
+    background-color: #ddd;
+    padding: 20px;
+}
+
+span {
+    margin-top: 5px;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 0.9em;
+    color: #444;
+}
+
+/*
+#div-footer {
+    background-color: antiquewhite;
+    border: solid;
+    max-width: 70%;
+    justify-content: center;
+} */
