--- a/Product landing Page/styles.css
+++ b/Product landing Page/styles.css
@@ -49,6 +49,8 @@ header {
     background-color: rgb(255, 208, 0);
     cursor: pointer;
     margin-top: 10px;
+    border: 0;
+    border-radius: 2px;
 }
 
 #div-form {
@@ -105,7 +107,6 @@ form {
 #pricing {
     margin-top: 100px;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     margin-bottom: 50px;
 }
@@ -124,9 +125,13 @@ h3{
     color: black;
     width: 100%;
     height: 50px;
+    margin-top: 0px;
     text-transform: uppercase;
     font-weight: 700;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 ol{
@@ -136,8 +141,11 @@ ol{
 
 button{
     width: 100px;
+    height: 30px;
     margin: auto;
     background-color: rgb(255, 208, 0);
+    border: 0;
+    border-radius: 2px;
 }
 
 footer{
@@ -146,6 +154,7 @@ footer{
     margin-top: 30px;
     background-color: #ddd;
     padding: 20px;
+    margin-bottom: -20px;
 }
 
 span {
