--- a/Survey Form/styles.css
+++ b/Survey Form/styles.css
@@ -1,6 +1,7 @@
 body
 {
     font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
     text-align: center;
     color: white;
     background-image: linear-gradient( 115deg, rgba(58, 58, 158, 0.8), rgba(136, 136, 206, 0.7) ), url("https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg");
@@ -75,5 +76,5 @@ input, button, select, textarea {
     min-height: 20px;
     width: 100%;
     padding: 0.625rem;
-    background-color: green;
+    background-color: #37af65;
 }
